fix alignment

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -253,12 +253,12 @@ a {
 }
 
 .content-section-a {
-    padding: 10px 0;
+    padding: 10px 10px;
     background-color: #f8f8f8;
 }
 
 .content-section-b {
-    padding: 10px 0;
+    padding: 10px 10px;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
 }
